# FindTheGhost

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  FindTheGhost.cpp
